--- a/css/style-classic.css
+++ b/css/style-classic.css
@@ -95,7 +95,7 @@ a.ws_button:hover {
 
 .ui-dialog {
 	background: white;
-	border: 1px solid #c0c0c0;
+	border: 1px solid #444444;
 }
 
 .ui-dialog-titlebar {
